# sbv2-gui

./: .gitignore  README.md  biome.json  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/actions/: build.yml
.github/workflows/: build.yml
src/: App.tsx  typing.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tts.rs
