[package]
name = "sbv2_gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sbv2_core = { git = "https://github.com/tuna2134/sbv2-api", version = "0.1.0", features = ["dynamic"] }
once_cell = "1.19.0"
dotenvy = "0.15.7"
anyhow = "1.0.87"
tokio = { version = "1.40.0", features = ["sync"] }
hf-hub = "0.3.2"
ort = { git = "https://github.com/pykeio/ort.git", version = "2.0.0-rc.6" }
open = "5.3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
debug = false
strip = true
