[package]
name = "sbv2_gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sbv2_core = { git = "https://github.com/tuna2134/sbv2-api", version = "0.2.0-alpha2", features = ["dynamic"], rev = "e73514e5d35ad681fc8880687e89e14e2fd5a9bd" }
once_cell = "1.19.0"
dotenvy = "0.15.7"
anyhow = "1.0.87"
tokio = { version = "1.40.0", features = ["sync"] }
hf-hub = "0.3.2"
ort = { git = "https://github.com/pykeio/ort.git", version = "2.0.0-rc.6", rev = "a7dd89e7734ba8f0d18ebc0a565e072c061f2e4b", features = ["load-dynamic"] }
open = "5.3.0"

[patch."https://github.com/pykeio/ort.git"]
ort = { git = "https://github.com/pykeio//ort.git", version = "2.0.0-rc.6", rev = "a7dd89e7734ba8f0d18ebc0a565e072c061f2e4b" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
debug = false
strip = true
